--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -68,14 +68,14 @@
       },
       {
         "command": "rangelink.copyPortableLinkWithRelativePath",
-        "title": "Copy Portable RangeLink",
+        "title": "Copy Portable Link",
         "category": "RangeLink",
         "icon": "$(link-external)",
         "enablement": "editorHasSelection"
       },
       {
         "command": "rangelink.copyPortableLinkWithAbsolutePath",
-        "title": "Copy Portable RangeLink (Absolute)",
+        "title": "Copy Portable Link (Absolute)",
         "category": "RangeLink",
         "icon": "$(link-external)",
         "enablement": "editorHasSelection"
@@ -109,49 +109,49 @@
       },
       {
         "command": "rangelink.bindToTerminal",
-        "title": "Bind RangeLink to Terminal Destination",
+        "title": "Bind to Terminal",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToTerminalHere",
-        "title": "Bind RangeLink Here",
+        "title": "Bind Here",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToTextEditor",
-        "title": "Bind RangeLink to Text Editor Destination",
+        "title": "Bind to Text Editor",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToTextEditorHere",
-        "title": "Bind RangeLink Here",
+        "title": "Bind Here",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToCursorAI",
-        "title": "Bind RangeLink to Cursor AI Destination",
+        "title": "Bind to Cursor AI",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToClaudeCode",
-        "title": "Bind RangeLink to Claude Code Destination",
+        "title": "Bind to Claude Code",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.bindToGitHubCopilotChat",
-        "title": "Bind RangeLink to GitHub Copilot Chat Destination",
+        "title": "Bind to GitHub Copilot Chat",
         "category": "RangeLink",
         "icon": "$(link)"
       },
       {
         "command": "rangelink.unbindDestination",
-        "title": "Unbind RangeLink",
+        "title": "Unbind",
         "category": "RangeLink",
         "icon": "$(close)"
       },
@@ -163,7 +163,7 @@
       },
       {
         "command": "rangelink.openStatusBarMenu",
-        "title": "Open RangeLink Menu",
+        "title": "Open Menu",
         "category": "RangeLink",
         "icon": "$(link)"
       },
@@ -179,6 +179,112 @@
         "title": "List Bookmarks",
         "category": "RangeLink",
         "icon": "$(bookmark)"
+      },
+      {
+        "command": "rangelink.pasteFileAbsolutePath",
+        "title": "Paste File Path (Absolute)",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.pasteFileRelativePath",
+        "title": "Paste File Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.pasteCurrentFileAbsolutePath",
+        "title": "Paste Current File Path (Absolute)",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)",
+        "enablement": "editorIsOpen"
+      },
+      {
+        "command": "rangelink.pasteCurrentFileRelativePath",
+        "title": "Paste Current File Path",
+        "category": "RangeLink",
+        "icon": "$(file-symlink-file)",
+        "enablement": "editorIsOpen"
+      },
+      {
+        "command": "rangelink.explorer.pasteFilePath",
+        "title": "RangeLink: Paste File Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.explorer.pasteRelativeFilePath",
+        "title": "RangeLink: Paste Relative File Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.editorTab.pasteFilePath",
+        "title": "RangeLink: Paste File Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.editorTab.pasteRelativeFilePath",
+        "title": "RangeLink: Paste Relative File Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.editorContent.pasteFilePath",
+        "title": "RangeLink: Paste This File's Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.editorContent.pasteRelativeFilePath",
+        "title": "RangeLink: Paste This File's Relative Path",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.editorContent.bind",
+        "title": "RangeLink: Bind Here",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.editorContent.unbind",
+        "title": "RangeLink: Unbind",
+        "icon": "$(close)"
+      },
+      {
+        "command": "rangelink.editorContext.copyLink",
+        "title": "RangeLink: Copy Range Link",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.editorContext.copyLinkAbsolute",
+        "title": "RangeLink: Copy Range Link (Absolute)",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.editorContext.copyPortableLink",
+        "title": "RangeLink: Copy Portable Link",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.editorContext.copyPortableLinkAbsolute",
+        "title": "RangeLink: Copy Portable Link (Absolute)",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.editorContext.pasteSelectedText",
+        "title": "RangeLink: Paste Selected Text",
+        "icon": "$(clippy)"
+      },
+      {
+        "command": "rangelink.editorContext.saveBookmark",
+        "title": "RangeLink: Save Selection as Bookmark",
+        "icon": "$(bookmark)"
+      },
+      {
+        "command": "rangelink.terminal.bind",
+        "title": "RangeLink: Bind Here",
+        "icon": "$(link)"
+      },
+      {
+        "command": "rangelink.terminal.unbind",
+        "title": "RangeLink: Unbind",
+        "icon": "$(close)"
       }
     ],
     "configuration": {
@@ -241,6 +347,23 @@
             "No padding (paste text exactly as selected)"
           ],
           "description": "Smart padding for selected text when using Paste Selected Text to Destination (R-V)"
+        },
+        "rangelink.smartPadding.pasteFilePath": {
+          "type": "string",
+          "enum": [
+            "both",
+            "before",
+            "after",
+            "none"
+          ],
+          "default": "both",
+          "enumDescriptions": [
+            "Add space before and after (prevents concatenation)",
+            "Add space before only",
+            "Add space after only",
+            "No padding (paste path as-is)"
+          ],
+          "description": "Smart padding for file paths when using Paste Path commands"
         },
         "rangelink.smartPadding.pasteBookmark": {
           "type": "string",
@@ -305,6 +428,18 @@
         "when": "editorHasSelection"
       },
       {
+        "command": "rangelink.pasteCurrentFileRelativePath",
+        "key": "ctrl+r ctrl+f",
+        "mac": "cmd+r cmd+f",
+        "when": "editorIsOpen"
+      },
+      {
+        "command": "rangelink.pasteCurrentFileAbsolutePath",
+        "key": "ctrl+r ctrl+shift+f",
+        "mac": "cmd+r cmd+shift+f",
+        "when": "editorIsOpen"
+      },
+      {
         "command": "rangelink.jumpToBoundDestination",
         "key": "ctrl+r ctrl+j",
         "mac": "cmd+r cmd+j"
@@ -330,69 +465,179 @@
         {
           "command": "rangelink.bindToTextEditorHere",
           "when": "false"
+        },
+        {
+          "command": "rangelink.pasteFileAbsolutePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.pasteFileRelativePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.explorer.pasteFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.explorer.pasteRelativeFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorTab.pasteFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorTab.pasteRelativeFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContent.pasteFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContent.pasteRelativeFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContent.bind",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContent.unbind",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.copyLink",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.copyLinkAbsolute",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.copyPortableLink",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.copyPortableLinkAbsolute",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.pasteSelectedText",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.editorContext.saveBookmark",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.terminal.bind",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.terminal.unbind",
+          "when": "false"
         }
       ],
       "editor/context": [
         {
-          "command": "rangelink.bindToTextEditorHere",
-          "group": "8_rangelink@0",
-          "when": "resourceScheme == file || resourceScheme == untitled"
+          "when": "editorHasSelection",
+          "command": "rangelink.editorContext.copyLink",
+          "group": "8_rangelink@0"
         },
         {
           "when": "editorHasSelection",
-          "command": "rangelink.copyLinkWithRelativePath",
+          "command": "rangelink.editorContext.copyLinkAbsolute",
           "group": "8_rangelink@1"
         },
         {
           "when": "editorHasSelection",
-          "command": "rangelink.copyLinkWithAbsolutePath",
+          "command": "rangelink.editorContext.copyPortableLink",
           "group": "8_rangelink@2"
         },
         {
           "when": "editorHasSelection",
-          "command": "rangelink.copyPortableLinkWithRelativePath",
+          "command": "rangelink.editorContext.copyPortableLinkAbsolute",
           "group": "8_rangelink@3"
         },
         {
           "when": "editorHasSelection",
-          "command": "rangelink.copyPortableLinkWithAbsolutePath",
+          "command": "rangelink.editorContext.pasteSelectedText",
           "group": "8_rangelink@4"
         },
         {
           "when": "editorHasSelection",
-          "command": "rangelink.pasteSelectedTextToDestination",
+          "command": "rangelink.editorContext.saveBookmark",
           "group": "8_rangelink@5"
         },
         {
-          "when": "editorHasSelection",
-          "command": "rangelink.bookmark.add",
-          "group": "8_rangelink@6"
+          "command": "rangelink.editorContent.pasteFilePath",
+          "group": "8_rangelink_files@0"
+        },
+        {
+          "command": "rangelink.editorContent.pasteRelativeFilePath",
+          "group": "8_rangelink_files@1"
+        },
+        {
+          "command": "rangelink.editorContent.bind",
+          "group": "8_rangelink_files@2",
+          "when": "resourceScheme == file || resourceScheme == untitled"
         },
         {
           "when": "rangelink.isBound",
-          "command": "rangelink.unbindDestination",
-          "group": "8_rangelink@7"
+          "command": "rangelink.editorContent.unbind",
+          "group": "8_rangelink_files@3"
+        }
+      ],
+      "editor/title/context": [
+        {
+          "command": "rangelink.editorTab.pasteFilePath",
+          "group": "3_rangelink@1"
+        },
+        {
+          "command": "rangelink.editorTab.pasteRelativeFilePath",
+          "group": "3_rangelink@2"
+        },
+        {
+          "command": "rangelink.editorContent.bind",
+          "group": "3_rangelink@3",
+          "when": "resourceScheme == file || resourceScheme == untitled"
+        },
+        {
+          "when": "rangelink.isBound",
+          "command": "rangelink.editorContent.unbind",
+          "group": "3_rangelink@4"
+        }
+      ],
+      "explorer/context": [
+        {
+          "command": "rangelink.explorer.pasteFilePath",
+          "group": "6_copypath@100"
+        },
+        {
+          "command": "rangelink.explorer.pasteRelativeFilePath",
+          "group": "6_copypath@101"
         }
       ],
       "terminal/title/context": [
         {
-          "command": "rangelink.bindToTerminalHere",
+          "command": "rangelink.terminal.bind",
           "group": "rangelink@1"
         },
         {
           "when": "rangelink.isBound",
-          "command": "rangelink.unbindDestination",
+          "command": "rangelink.terminal.unbind",
           "group": "rangelink@2"
         }
       ],
       "terminal/context": [
         {
-          "command": "rangelink.bindToTerminalHere",
+          "command": "rangelink.terminal.bind",
           "group": "rangelink@1"
         },
         {
           "when": "rangelink.isBound",
-          "command": "rangelink.unbindDestination",
+          "command": "rangelink.terminal.unbind",
           "group": "rangelink@2"
         }
       ]
