--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -285,6 +285,12 @@
         "command": "rangelink.terminal.unbind",
         "title": "RangeLink: Unbind",
         "icon": "$(close)"
+      },
+      {
+        "command": "rangelink.goToRangeLink",
+        "title": "Go to Link",
+        "category": "RangeLink",
+        "icon": "$(go-to-file)"
       }
     ],
     "configuration": {
@@ -454,6 +460,11 @@
         "command": "rangelink.bookmark.list",
         "key": "ctrl+r ctrl+b ctrl+l",
         "mac": "cmd+r cmd+b cmd+l"
+      },
+      {
+        "command": "rangelink.goToRangeLink",
+        "key": "ctrl+r ctrl+g",
+        "mac": "cmd+r cmd+g"
       }
     ],
     "menus": {
