[issues/266] Add `/breadcrumb` command for tracking notes during issue work
Context gets lost between sessions when working on issues - key decisions, discoveries, and
"aha moments" live only in conversation history. This adds a simple way to persist those notes.

- `/breadcrumb <note>` appends timestamped entries to `.breadcrumbs/<ISSUE-NUMBER>.md`
- `/finish-issue` now collects breadcrumbs for PR description generation
- Directory is ephemeral (gitignored) like scratchpads

Workflow: /start-issue → /breadcrumb (multiple times) → /finish-issue

Closes #266

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ packages/*/icon_large.png
 .claude/settings.local.json
 
 # Folders where Claude Code is told to create and manage working documents
+.breadcrumbs/
 .claude-questions/
 .commit-msgs/
 .scratchpads/
