[issues/278] Add R-M keybinding for RangeLink menu
## Summary

Adds keyboard shortcut `Cmd+R Cmd+M` (Mac) / `Ctrl+R Ctrl+M` (Win/Linux) to open the RangeLink menu. This enables keyboard-only access to quick actions like Jump to Destination, Go to Link, and Bookmarks management without requiring mouse interaction.

User-facing documentation now uses "RangeLink Menu" instead of "Status Bar Menu" since the keyboard shortcut makes it accessible without knowing about the status bar item.

## Changes

- Added keybinding `R-M` for `rangelink.openStatusBarMenu` command
- Updated README:
  - Renamed section from "Status Bar Menu" to "RangeLink Menu" (user-centric naming)
  - Commands table includes "Open Menu" with `R-M` shortcut
  - Keyboard shortcut now listed first (primary access method)
- Updated CHANGELOG entry with user-centric "RangeLink Menu" naming
- Added contract test for the new keybinding

## Test Plan

- [x] New test added for: `rangelink.openStatusBarMenu` keybinding contract
- [ ] Manual testing: Press `Cmd+R Cmd+M` to verify menu opens

## Documentation

- [x] CHANGELOG.md: Entry renamed to "RangeLink Menu (R-M)" with keybinding info
- [x] README.md: Section renamed to "RangeLink Menu", added to commands table

## Related

- Closes #278

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -465,6 +465,11 @@
         "command": "rangelink.goToRangeLink",
         "key": "ctrl+r ctrl+g",
         "mac": "cmd+r cmd+g"
+      },
+      {
+        "command": "rangelink.openStatusBarMenu",
+        "key": "ctrl+r ctrl+m",
+        "mac": "cmd+r cmd+m"
       }
     ],
     "menus": {
