[issues/298] Add warnOnDirtyBuffer configuration setting
Adds the `rangelink.warnOnDirtyBuffer` setting (default: true) that controls
whether a warning is shown when generating a link from a file with unsaved changes.

Changes:
- Added setting to package.json contributes.configuration
- Added SETTING_WARN_ON_DIRTY_BUFFER constant
- Added ConfigReader.getBoolean() method for boolean settings
- Added tests for the new config method and package.json contract

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -387,6 +387,11 @@
             "No padding (paste bookmark as-is)"
           ],
           "description": "Smart padding for saved bookmarks when pasting to destinations"
+        },
+        "rangelink.warnOnDirtyBuffer": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show warning when generating link from file with unsaved changes"
         }
       }
     },
