Add `terminalPicker.maxInline` setting
Lets users configure how many terminals appear inline in the destination picker
before collapsing into "More terminals...". Defaults to 5.

Previously this threshold was hardcoded. Exposing it as a setting gives users
with many terminals control over picker density.

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -392,6 +392,12 @@
           "type": "boolean",
           "default": true,
           "description": "Show warning when generating link from file with unsaved changes"
+        },
+        "rangelink.terminalPicker.maxInline": {
+          "type": "number",
+          "default": 5,
+          "minimum": 1,
+          "description": "Maximum terminals shown inline in destination picker (extras collapsed into 'More terminals...')"
         }
       }
     },
