[issues/247] Add bind/unbind to explorer context menu
## Summary

Adds "Bind Here" and "Unbind" commands to the Explorer right-click menu, making the file explorer a first-class entry point for binding text editor destinations. Right-clicking a file and choosing "Bind Here" opens the file and binds it as the destination in one step, matching the bind/unbind pattern already available on editor tabs and terminal context menus.

## Changes

- Two new command IDs: `rangelink.explorer.bind` and `rangelink.explorer.unbind`
- Explorer context menu entries in their own `8_rangelink` group (visually separated from the copy-path commands in `6_copypath`)
- "Bind Here" only appears for files (not folders), "Unbind" only when a destination is bound
- Both commands hidden from Command Palette (context-menu-only, no category)
- Handler opens the file via `showTextDocument` before binding, so the user doesn't need to open it first

## Test Plan

- [x] All existing tests pass (1372 tests, 68 suites)
- [x] Contract tests updated: command count 41→43, explorer context menu 2→4, commandPalette 20→22
- [x] Extension lifecycle test updated: expectedCommands +2, COMMAND_COUNT 43→45
- [ ] Manual testing: right-click file in Explorer → "Bind Here" opens and binds; "Unbind" clears binding

## Related

- Closes #247

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -207,6 +207,11 @@
         "enablement": "editorIsOpen"
       },
       {
+        "command": "rangelink.explorer.bind",
+        "title": "RangeLink: Bind Here",
+        "icon": "$(link)"
+      },
+      {
         "command": "rangelink.explorer.pasteFilePath",
         "title": "RangeLink: Paste File Path",
         "icon": "$(file-symlink-file)"
@@ -215,6 +220,11 @@
         "command": "rangelink.explorer.pasteRelativeFilePath",
         "title": "RangeLink: Paste Relative File Path",
         "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "rangelink.explorer.unbind",
+        "title": "RangeLink: Unbind",
+        "icon": "$(close)"
       },
       {
         "command": "rangelink.editorTab.pasteFilePath",
@@ -502,11 +512,19 @@
           "when": "false"
         },
         {
+          "command": "rangelink.explorer.bind",
+          "when": "false"
+        },
+        {
           "command": "rangelink.explorer.pasteFilePath",
           "when": "false"
         },
         {
           "command": "rangelink.explorer.pasteRelativeFilePath",
+          "when": "false"
+        },
+        {
+          "command": "rangelink.explorer.unbind",
           "when": "false"
         },
         {
@@ -644,6 +662,16 @@
         {
           "command": "rangelink.explorer.pasteRelativeFilePath",
           "group": "6_copypath@2"
+        },
+        {
+          "command": "rangelink.explorer.bind",
+          "group": "8_rangelink@1",
+          "when": "explorerResourceIsFolder == false"
+        },
+        {
+          "when": "rangelink.isBound && explorerResourceIsFolder == false",
+          "command": "rangelink.explorer.unbind",
+          "group": "8_rangelink@2"
         }
       ],
       "terminal/title/context": [
